--- a/templates/edit.html
+++ b/templates/edit.html
@@ -21,7 +21,7 @@
             <input type="datetime" name="fecha_registro" value="{{id.1}}" placeholder="" class="form-control">
         </div>
         <div class="form-group">
-            <label for="identificador_aula">Identificador de aula</label>
+            <label for="identificador_laboratorio">Identificador de laboratorio</label>
             <input type="text" name="identificador_aula" value="{{id.2}}" placeholder="" class="form-control">
         </div>
         <div class="form-group">
