--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
             <a href="/login" class="btn btn-outline-primary my-2 my-sm-0">Login</a>
         </div>
         <div class="form-group">
-            <label for="identificador_aula">Identificador de laboratorio</label>
-            <select name="identificador_aula" class="form-control" required>
+            <label for="identificador_laboratorio">Identificador de laboratorio</label>
+            <select name="identificador_laboratorio" class="form-control" required>
                 <option value="" disabled {% if not form_data %}selected{% endif %}>Selecciona un laboratorio</option>
                 {% for value in [
                 "Laboratorio de Programación",
