--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
         <div class="d-flex align-items-center justify-content-between">
             <img src="{{ url_for('static', filename='imagen.png') }}" alt="Unicesmag"
                 style="width: 110px; height: 110px; margin-left: 10px;">
-            <h1 class="mb-0 ms-auto" style="font-size: 25px;">CONTROL DE LABORATORIOS DE SISTEMAS</h1>
+            <h1 class="mb-0 ms-auto" style="font-size: 25px; font-weight: bold;">CONTROL DE LABORATORIOS DE SISTEMAS</h1>
             <div class="d-flex align-items-center">
                 <img src="{{ url_for('static', filename='imagen2.jpg') }}" alt="Infraestructura TI"
                     style="width: 120px; height: 130px; margin-right: 30px;">
