--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web</title>
+    <title>Control de Laboratorios de Sistemas</title>
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
