--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,7 @@
                 style="width: 110px; height: 110px; margin-left: 10px;">
             <h1 class="mb-0 ms-auto" style="font-size: 25px; font-weight: bold;">CONTROL DE LABORATORIOS DE SISTEMAS</h1>
             <div class="d-flex align-items-center">
-                <img src="{{ url_for('static', filename='imagen2.jpg') }}" alt="Infraestructura TI"
+                <img src="{{ url_for('static', filename='imagen2.png') }}" alt="Infraestructura TI"
                     style="width: 120px; height: 130px; margin-right: 30px;">
             </div>
         </div>
